--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@types/node": "^22.13.14",
+    "dotenv": "^16.4.7",
     "inquirer": "^12.5.0",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
