--- a/Projeto1/package.json
+++ b/Projeto1/package.json
@@ -1,29 +1,24 @@
 {
-  "name": "projeto2",
+  "name": "projeto1",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "setup": "npm install && npm run build",
     "build": "tsc",
-    "start": "ts-node src/index.ts",
-    "dev": "ts-node-dev src/index.ts"
+    "start": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/node": "^22.13.14",
-    "dotenv": "^16.4.7",
-    "inquirer": "^12.5.0",
-    "pg": "^8.14.1",
-    "reflect-metadata": "^0.2.2",
-    "ts-node": "^10.9.2",
-    "typeorm": "^0.3.21",
-    "typescript": "^5.8.2"
+    "inquirer": "^12.5.0"
   },
   "devDependencies": {
-    "ts-node-dev": "^2.0.0"
+    "@types/inquirer": "^9.0.7",
+    "@types/node": "^22.13.14",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
   }
 }
